serving/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: really ridiculously good looking...
    openshift.io/display-name: Hand Models
  name: models
