serving/resources/grafana-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: grafana
spec:
  to:
    kind: Service
    name: grafana-service
    weight: 100
  port:
    targetPort: grafana
  tls:
    termination: edge
